fixed Envelope class